Bug #3984: Remove width and word-break in table td

--- a/src/sunstone/public/scss/app.scss
+++ b/src/sunstone/public/scss/app.scss
@@ -309,8 +309,6 @@ select {
 
 .value_td {
     text-overflow:ellipsis;
-    word-break: break-all;
-    width: 100%;
 }
 
 .key_td {
